# elementary-mcp-client

./: README.md  pyproject.toml
elementary_mcp_client/: __main__.py
